--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ requests==2.32.3
 six==1.16.0
 sniffio==1.3.1
 starlette==0.38.6
+tenacity==9.0.0
 tqdm==4.66.5
 typing_extensions==4.12.2
 urllib3==2.2.3
